--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,4 +9,4 @@ services:
     ports:
       - "8086:8086"
     volumes: 
-      - /opt/data:/var/lib/mysql
+      - /home/martin/influxdb/:/var/lib/influxdb2
