--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,10 @@ services:
     build: .
     ports:
       - "8080:8080"
+    environment: 
+      - INFLUX_DB_TOCKEN: "KgxPwKzYqX2XiWFrUKBxOOsyCDzzoIEIcCcnbWWwvmTO2y6HIr38I8EhbONVcOyTwnZFWxJaRUmxGP7ClDbwrA=="
+      - INFLUX_DB_HOST: "http://open_data_tyrol_influxdb_1:8086"
+      - INFLUX_DB_ORG: "influxdb"
   influxdb:
     image: "influxdb:2.0"
     ports:
