--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,9 +5,9 @@ services:
     ports:
       - "8080:8080"
     environment: 
-      - INFLUX_DB_TOCKEN: "KgxPwKzYqX2XiWFrUKBxOOsyCDzzoIEIcCcnbWWwvmTO2y6HIr38I8EhbONVcOyTwnZFWxJaRUmxGP7ClDbwrA=="
-      - INFLUX_DB_HOST: "http://open_data_tyrol_influxdb_1:8086"
-      - INFLUX_DB_ORG: "influxdb"
+      - INFLUX_DB_TOCKEN=<YOUR_TOCKEN_HERE>
+      - INFLUX_DB_HOST=http://open_data_tyrol_influxdb_1:8086
+      - INFLUX_DB_ORG=influxdb
   influxdb:
     image: "influxdb:2.0"
     ports:
