--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,14 +5,17 @@ services:
     ports:
       - "8080:8080"
     environment: 
-      - INFLUX_DB_TOCKEN=<YOUR_INFLUXDB_TOCKEN>
+      - INFLUX_DB_TOCKEN=<YOUR_INFLUX_DB_TOCKEN>
       - INFLUX_DB_HOST=http://open_data_tyrol_influxdb_1:8086
-      - INFLUX_DB_ORG=influxdb
+      - INFLUX_DB_ORG=<YOUR_INFLUX_DB_ORG_NAME>
+      - INFLUX_DB_BUCKET=<YOUR_INFLUX_DB_BUCKET_NAME>
+    restart: always
   influxdb:
     image: "influxdb:2.0"
     ports:
       - "8086:8086"
     volumes: 
       - type: bind
-        source: "<YOUR_LOCAL_DIRECOTRY>"
+        source: "<YOUR_INFLUX_DB_DIR>"
         target: "/var/lib/influxdb2"
+    restart: always
