--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,10 +6,10 @@ services:
       - "8080:8080"
     environment: 
       - INFLUX_DB_TOKEN=<YOUR_INFLUX_DB_TOKEN>
-      - INFLUX_DB_HOST=http://open_data_tyrol_influxdb_1:8086
+      - INFLUX_DB_HOST=http://open_data_tyrol-influxdb-1:8086
       - INFLUX_DB_ORG=<YOUR_INFLUX_DB_ORG_NAME>
       - INFLUX_DB_BUCKET=<YOUR_INFLUX_DB_BUCKET_NAME>
-      - MONGO_DB_HOST=mongodb://127.0.0.1:27017
+      - MONGO_DB_HOST=mongodb://open_data_tyrol-mongodb-1:27017
       - MONGO_DB_DB=<YOUR_MONGO_DB_DATABASE>
       - MONGO_DB_COLLECTION=<YOUR_MONGO_DB_COLLECTION>
       - MONGO_DB_USER=<YOUR_MONGO_DB_USER>
@@ -36,3 +36,18 @@ services:
     environments: 
       - MONGO_INITDB_ROOT_USERNAME=<YOUR_MONGO_DB_USER>
       - MONGO_INITDB_ROOT_PASSWORD=<YOUR_MONGO_DB_PASSWORD>
+  dash: 
+    build: ./collector/Dockerfile
+    ports:
+      - "8050:8050"
+    environment: 
+      - INFLUX_DB_TOKEN=<YOUR_INFLUX_DB_TOKEN>
+      - INFLUX_DB_HOST=http://open_data_tyrol-influxdb-1:8086
+      - INFLUX_DB_ORG=<YOUR_INFLUX_DB_ORG_NAME>
+      - INFLUX_DB_BUCKET=<YOUR_INFLUX_DB_BUCKET_NAME>
+      - MONGO_DB_HOST=mongodb://open_data_tyrol-mongodb-1:27017
+      - MONGO_DB_DB=<YOUR_MONGO_DB_DATABASE>
+      - MONGO_DB_COLLECTION=<YOUR_MONGO_DB_COLLECTION>
+      - MONGO_DB_USER=<YOUR_MONGO_DB_USER>
+      - MONGO_DB_PASSWORD=<YOUR_MONGO_DB_PASSWORD>
+    restart: always
